Minified with Google Closure

--- a/jquery-animate-css.html
+++ b/jquery-animate-css.html
@@ -104,6 +104,12 @@
 		</li>
 	</ul>
 	
+	<h2>Download</h2>
+	<ul>
+		<li><a href="jquery.animate-enhanced.min.js">Compressed version (3.1k)</a></li>
+		<li><a href="scripts/src/jquery.animate-enhanced.js">Uncompressed version (6.6k)</a></li>
+	</ul>
+	
 	<h2>Credits</h2>
 	<ul>
 		<li>Author: <a href="http://www.benbarnett.net">Ben Barnett</a> (<a href="http://twitter.com/benpbarnett">Twitter</a>)</li>
@@ -113,7 +119,7 @@
 	<a href="http://github.com/benbarnett/jQuery-Animate-Enhanced"><img style="position: absolute; top: 0; left: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub" /></a> 
 	
 	<script type="text/javascript" src="scripts/contrib/jquery-1.4.2.js"></script>
-	<script type="text/javascript" src="scripts/src/jquery.animate-enhanced.js"></script>
+	<script type="text/javascript" src="jquery.animate-enhanced.min.js"></script>
 	<script type="text/javascript" charset="utf-8">
 		$('button').click(function() {
 			var results = $('p#results').html("Animating...");
