--- a/jquery-animate-css.html
+++ b/jquery-animate-css.html
@@ -58,6 +58,8 @@
 		<li>top : using <em>translate(x, y) or translate3d(x, y, z)</em></li>
 		<li>opacity</li>
 	</ul>
+	
+	<p>Note that any properties not mentioned above will simply be handled by the standard jQuery $.animate() method. This plugin adds new functionality without taking any away.</p>
 
 	<h2>Demo</h2>
 	<div id="target">
@@ -114,6 +116,7 @@
 	<ul>
 		<li>Author: <a href="http://www.benbarnett.net">Ben Barnett</a> (<a href="http://twitter.com/benpbarnett">Twitter</a>)</li>
 		<li>Aza for <a href="http://gist.github.com/435054">his gist</a> on CSS Animation wtih jQuery</li>
+		<li>jonraasch for <a href="http://gist.github.com/373874">his gist on detecting CSS3 support</a></li>
 	</ul>
 	
 	<a href="http://github.com/benbarnett/jQuery-Animate-Enhanced"><img style="position: absolute; top: 0; left: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub" /></a> 
