--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<li>Context issues fixed on callback(); 'this' = element passed in</li>
 		<li>$.translate() method to calculate x/y transforms from CSS3 Matrix</li>
 		<li>Support for <b>$.fn.stop([clearQueue, jumpToEnd, leaveTransforms])</b></li>
-		<li>Tweaks for jQuery 1.4.3</li>
+		<li>Tweaks for jQuery 1.4.3 and 1.6.x</li>
 		<li>Enhance 'width' and 'height' properties</li>
 		<li>Compatible with .fadeIn(), .fadeOut(), .slideUp(), .slideDown() and slideToggle()</li>
 		<li>jQuery shortcuts ("fast", "slow")</li>
