--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 	
 	<h3>Properties supported: (more to come)</h3> 
 	<ul> 
-		<li>left : using <em>translate(x, y) or translate3d(x, y, z)</em></li> 
-		<li>top : using <em>translate(x, y) or translate3d(x, y, z)</em></li> 
+		<li>left/right : using <em>translate(x, y) or translate3d(x, y, z)</em></li>
+		<li>top/bottom : using <em>translate(x, y) or translate3d(x, y, z)</em></li>
 		<li>opacity</li> 
 		<li>width</li> 
 		<li>height</li> 
 	</ul> 
 	
-	<h3>New features in v0.64:</h3> 
+	<h3>New features in v1.0:</h3> 
 	<ul> 
 		<li>Animation 'queue' support (including .delay())</li> 
 		<li>Context issues fixed on callback(); 'this' = element passed in</li> 
@@ -91,6 +91,9 @@
 		<li>Multiple bug fixes</li> 
 		<li>Licensed under <a href="http://www.opensource.org/licenses/mit-license.php">MIT License</a></li> 
 	</ul> 
+
+	<a href="http://twitter.com/benpbarnett" class="twitter-follow-button" data-show-count="false">Follow @benpbarnett</a>
+	<script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
 	
 	<p>Note that any properties not mentioned above will simply be handled by the standard jQuery $.animate() method. This plugin adds new functionality without taking any away. Requires jQuery 1.3.2+</p> 
  
